# odometry_calibration

./: tf.ipynb  tf2.ipynb
ruvu_odometry_calibration/: CMakeLists.txt  package.xml  setup.py
ruvu_odometry_calibration/doc/: calibration.ipynb  calibration2.ipynb  calibration3.ipynb  icp.ipynb  inverse_odometry.ipynb  partitioning.ipynb  tf.ipynb  tf2.ipynb
ruvu_odometry_calibration/scripts/: calibrate  plot_path
ruvu_odometry_calibration/src/: bag_buffer.cpp  bag_buffer.hpp  main.cpp
ruvu_odometry_calibration/src/ruvu_odometry_calibration/: odometry_calibration.py  tf2_rosbag.py
