<?xml version="1.0"?>
<package format="2">
  <name>ruvu_odometry_calibration</name>
  <version>0.0.0</version>
  <description>The ruvu_odometry_calibration package</description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
